# TiagoRobotSkillLearning

./: 9.Pytorch Convolution AutoEncoder.ipynb  LICENSE  README.md  encoderlstmdecoder.ipynb  encodertransformers_pynb.ipynb  offlineQLEARNING.ipynb
pick_place_code/: CMakeLists.txt  package.xml
pick_place_code/action/: PickUpPose.action
pick_place_code/cfg/: SphericalGrasp.cfg
pick_place_code/config/: pick_and_place_params.yaml  pregrasp_motion.yaml
pick_place_code/launch/: pick_demo.launch  pick_place.launch
pick_place_code/scripts/: pick_and_place_server.py  play.py  record.py  robotcontrol.ui  robotorder.py
pick_place_code/src/: blueDetect.cpp  passdoor.cpp  redDetect.cpp
pick_place_code/ui_file/: robotcontrol.ui
pick_place_code/worlds/: worlds
play/: CHANGELOG.rst
play/scripts/: models.py  moverobot.py  pick_client.py  play.py  play2.py  record.py  robotorder.py  spherical_grasps_server.py  talker.py
